--- a/drafts/lesson-00.html
+++ b/drafts/lesson-00.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>ОГЭ 2023 информатика - andygram</title>
+  <title>Урок 0 | ОГЭ 2023 информатика</title>
   <meta charset="utf-8">
 <!--
-<meta name="description" content=""><meta name="author" content="andygram">-->
+<meta name="description" content="Задание 0 из варианта 0"><meta name="author" content="andygram">-->
   <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
   <meta http-equiv="Cache-Control" content="max-age=604800, must-revalidate" />
   <link href="../theme/css/screen.css" rel="stylesheet" type="text/css" />
@@ -20,23 +20,17 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
-<h2>andygram</h2>
-<dl>
-<dd><a href="../lesson-09.html">Урок 9</a></dd>
-<dd><a href="../lesson-08.html">Урок 8</a></dd>
-<dd><a href="../lesson-07.html">Урок 7</a></dd>
-<dd><a href="../lesson-06.html">Урок 6</a></dd>
-<dd><a href="../lesson-05.html">Урок 5</a></dd>
-<dd><a href="../lesson-04.html">Урок 4</a></dd>
-<dd><a href="../lesson-03.html">Урок 3</a></dd>
-<dd><a href="../lesson-02.html">Урок 2</a></dd>
-<dd><a href="../lesson-01.html">Урок 1</a></dd>
-<dd><a href="../mempython.html">Питончик</a></dd>
-<dd><a href="../evichansw.html">Ответы</a></dd>
-<dd><a href="../evichbook.html">Книга</a></dd>
-<dd><a href="../fipi.html">Ф И П И</a></dd>
-<dd><a href="../meeting.html">Договор</a></dd>
-</dl>
+<h2><a href="../drafts/lesson-00.html">Урок 0</a></h2>
+<h5><i class="icon-feather"></i> 13.09.2022, Вт
+<i class="icon-bookmarks"></i>
+<span><a href="../tag/oge.html">oge</a> / </span>
+<span><a href="../tag/lesson.html">lesson</a> / </span>
+</h5>
+
+<h1>Задание 13.2</h1>
+<p><img alt="pic" src="./images/lesson-02_01.png"></p>
+
+<p align="center"><a href="#">on the top</a></p>
     </div>
 </div>
 <div id="footer-wrapper">
