--- a/mempython.html
+++ b/mempython.html
@@ -37,13 +37,13 @@
 <p><img alt="pic" src="./images/mem-python-boolean.jpg"></p>
 <h2>Ввод и вывод</h2>
 <p><img alt="pic" src="./images/mem-python-io.jpg">
-<img alt="pic" src="./images/mem-python-print-info.png"></p>
+[comment]: &lt;&gt; <img alt="pic" src="./images/mem-python-print-info.png"></p>
 <h2>Условный оператор</h2>
 <p><img alt="pic" src="./images/mem-python-if-else.jpg"></p>
 <h2>Конечный цикл</h2>
 <p><img alt="pic" src="./images/mem-python-for.jpg">
 <img alt="pic" src="./images/mem-python-range.jpg">
-<img alt="pic" src="./images/mem-python-range-info.png"></p>
+[comment]: &lt;&gt; <img alt="pic" src="./images/mem-python-range-info.png"></p>
 <h2>Бесконечный цикл</h2>
 <p><img alt="pic" src="./images/mem-python-while.jpg"></p>
 <h2>Управление циклом</h2>
