--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </div>    <div id="main">
 <h2><a href="./lesson-09.html">Урок 9</a></h2>
 <h5><i class="icon-feather"></i> 15.11.2022, Вт </h5>
-Разбор задания 6 (Бесконечный цикл) из вариантов 17-19
+Разбор задания 4 (Кратчайшее расстояние) из вариантов 1-3
 <h2><a href="./lesson-08.html">Урок 8</a></h2>
 <h5><i class="icon-feather"></i> 08.11.2022, Вт </h5>
 Разбор задания 6 (Бесконечный цикл) из вариантов 17-19
