--- a/lesson-10.html
+++ b/lesson-10.html
@@ -27,7 +27,7 @@
 <span><a href="./tag/lesson.html">lesson</a> / </span>
 </h5>
 
-<h1>Задание 3 : Логическое выражение</h1>
+<h1>Задание 3 : Истинность высказывания</h1>
 <p><img alt="pic" src="./images/Boolean-operators.png"></p>
 <h3>Вариант 1</h3>
 <p><img alt="pic" src="./images/evich2021-V01-Z03_task.png"></p>
@@ -38,7 +38,7 @@
 <h3>Вариант 3</h3>
 <p><img alt="pic" src="./images/evich2021-V03-Z03_task.png"></p>
 <h2>Ответы к заданиям 3</h2>
-<p><img alt="pic" src="./images/evich2021-Z03_V01-03_answers.png"></p>
+<p><img alt="pic" src="./images/evich2021-Z03_answers.png"></p>
 <h3>Вариант 11</h3>
 <p><img alt="pic" src="./images/evich2021-V11-Z03_task.png"></p>
 <h3>Вариант 12</h3>
