--- a/index4.html
+++ b/index4.html
@@ -20,25 +20,12 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
-<h2><a href="./lesson-06.html">Урок 6</a></h2>
-<h5><i class="icon-feather"></i> 25.10.2022, Вт </h5>
-Разбор задания 6 (Условный оператор) из вариантов 1-3; + "Лайфхак"
-<h2><a href="./lesson-05.html">Урок 5</a></h2>
-<h5><i class="icon-feather"></i> 18.10.2022, Вт </h5>
-Разбор задания 7 (Интернет-адрес) из вариантов 1-3; + Контрольная работа
-<h2><a href="./lesson-04.html">Урок 4</a></h2>
-<h5><i class="icon-feather"></i> 11.10.2022, Вт </h5>
-Разбор задания 8 (Поисковый запрос) из вариантов 1-3
-<h2><a href="./lesson-03.html">Урок 3</a></h2>
-<h5><i class="icon-feather"></i> 04.10.2022, Вт </h5>
-Разбор задания 9 (Схема дорог) из вариантов 1-3
-<h2><a href="./lesson-02.html">Урок 2</a></h2>
-<h5><i class="icon-feather"></i> 27.09.2022, Вт </h5>
-Разбор задания 10 (Системы счисления) из вариантов 1-3; Разбор домашнего задания (13.2 вариант 2)
+<h2><a href="./meeting.html">Договор</a></h2>
+<h5><i class="icon-feather"></i> 11.09.2022, Вс </h5>
+Знакомство с родителями и договор
 <div class="pagination">
-        <a href="./index.html">&larr;Prev</a>
-    page 2 of 4.
-        <a href="./index3.html">Next&rarr;</a>
+        <a href="./index3.html">&larr;Prev</a>
+    page 4 of 4.
 </div>    </div>
 </div>
 <div id="footer-wrapper">
