--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
+<h2><a href="./lesson-11.html">Урок 11</a></h2>
+<h5><i class="icon-feather"></i> 06.12.2022, Вт </h5>
+Разбор задания 2 (Зашифрованное сообщение) из вариантов 1-3, 11-13
 <h2><a href="./lesson-10.html">Урок 10</a></h2>
 <h5><i class="icon-feather"></i> 29.11.2022, Вт </h5>
 Разбор задания 3 (Истинность высказывания) из вариантов 1-3, 11-13
@@ -32,11 +35,8 @@
 <h2><a href="./lesson-07.html">Урок 7</a></h2>
 <h5><i class="icon-feather"></i> 01.11.2022, Вт </h5>
 Разбор задания 6 (Конечный цикл) из вариантов 13-15
-<h2><a href="./lesson-06.html">Урок 6</a></h2>
-<h5><i class="icon-feather"></i> 25.10.2022, Вт </h5>
-Разбор задания 6 (Условный оператор) из вариантов 1-3; + "Лайфхак"
 <div class="pagination">
-    page 1 of 3.
+    page 1 of 4.
         <a href="./index2.html">Next&rarr;</a>
 </div>    </div>
 </div>
