--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
+<h2><a href="./lesson-12.html">Урок 12</a></h2>
+<h5><i class="icon-feather"></i> 20.12.2022, Вт </h5>
+Разбор задания 1 (Биты и байты) из вариантов 1-3, 11-13
 <h2><a href="./lesson-11.html">Урок 11</a></h2>
-<h5><i class="icon-feather"></i> 06.12.2022, Вт </h5>
+<h5><i class="icon-feather"></i> 13.12.2022, Вт </h5>
 Разбор задания 2 (Зашифрованное сообщение) из вариантов 1-3, 11-13
 <h2><a href="./lesson-10.html">Урок 10</a></h2>
 <h5><i class="icon-feather"></i> 29.11.2022, Вт </h5>
@@ -32,9 +35,6 @@
 <h2><a href="./lesson-08.html">Урок 8</a></h2>
 <h5><i class="icon-feather"></i> 08.11.2022, Вт </h5>
 Разбор задания 6 (Бесконечный цикл) из вариантов 17-19
-<h2><a href="./lesson-07.html">Урок 7</a></h2>
-<h5><i class="icon-feather"></i> 01.11.2022, Вт </h5>
-Разбор задания 6 (Конечный цикл) из вариантов 13-15
 <div class="pagination">
     page 1 of 4.
         <a href="./index2.html">Next&rarr;</a>
