--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </div>    <div id="main">
 <h2><a href="./lesson-12.html">Урок 12</a></h2>
 <h5><i class="icon-feather"></i> 20.12.2022, Вт </h5>
-Разбор задания 1 (Биты и байты) из вариантов 1-3, 11-13
+Разбор задания 1 (Биты и байты) из вариантов 1-3
 <h2><a href="./lesson-11.html">Урок 11</a></h2>
 <h5><i class="icon-feather"></i> 13.12.2022, Вт </h5>
 Разбор задания 2 (Зашифрованное сообщение) из вариантов 1-3, 11-13
