--- a/lesson-12.html
+++ b/lesson-12.html
@@ -4,7 +4,7 @@
   <title>Урок 12 | ОГЭ 2023 информатика</title>
   <meta charset="utf-8">
 <!--
-<meta name="description" content="Разбор задания 1 (Биты и байты) из вариантов 1-3, 11-13"><meta name="author" content="andygram">-->
+<meta name="description" content="Разбор задания 1 (Биты и байты) из вариантов 1-3"><meta name="author" content="andygram">-->
   <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
   <meta http-equiv="Cache-Control" content="max-age=604800, must-revalidate" />
   <link href="./theme/css/screen.css" rel="stylesheet" type="text/css" />
@@ -33,28 +33,19 @@
 <p><img alt="pic" src="./images/evich2021-V01-Z01_task.png"></p>
 <h3>Решение из книги</h3>
 <p><img alt="pic" src="./images/evich2021-V01-Z01_solution.png"></p>
-<h3>Вариант 2</h3>
-<p><img alt="pic" src="./images/evich2021-V02-Z01_task.png"></p>
-<h3>Вариант 3</h3>
-<p><img alt="pic" src="./images/evich2021-V03-Z01_task.png"></p>
-<h2>Ответы к заданиям 2</h2>
-<p><img alt="pic" src="./images/evich2021-Z01_answers.png"></p>
-<h3>Вариант 11</h3>
-<p><img alt="pic" src="./images/evich2021-V11-Z01_task.png"></p>
-<h3>Вариант 12</h3>
-<p><img alt="pic" src="./images/evich2021-V12-Z01_task.png"></p>
-<h3>Вариант 13</h3>
-<p><img alt="pic" src="./images/evich2021-V13-Z01_task.png"></p>
+<h2>Ответы к заданиям 1</h2>
+<p><img alt="pic" src="./images/evich2021-Z02_answers.png"></p>
+<h3>Что надо знать</h3>
+<p><img alt="pic" src="./images/evich2021-Z01_img1.png"></p>
+<h3>Что надо уметь</h3>
+<p><img alt="pic" src="./images/evich2021-Z01_img2.png"></p>
+<h3>Задача 1</h3>
+<p><img alt="pic" src="./images/evich2021-Z01_img3.png"></p>
+<h3>Задача 2</h3>
+<p><img alt="pic" src="./images/evich2021-Z01_img4.png"></p>
+<h3>Задача 3</h3>
+<p><img alt="pic" src="./images/evich2021-Z01_img5.png"></p>
 <h2>Заданий повышенной сложности нет</h2>
-<h2>Домашнее задание</h2>
-<h3>Вариант 17</h3>
-<p><img alt="pic" src="./images/evich2021-V17-Z01_task.png"></p>
-<h3>Вариант 18</h3>
-<p><img alt="pic" src="./images/evich2021-V18-Z01_task.png"></p>
-<h3>Вариант 19</h3>
-<p><img alt="pic" src="./images/evich2021-V19-Z01_task.png"></p>
-<h3>Вариант 20</h3>
-<p><img alt="pic" src="./images/evich2021-V20-Z01_task.png"></p>
 
 <p align="center"><a href="#">on the top</a></p>
     </div>
