--- a/lesson-14.html
+++ b/lesson-14.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>ОГЭ 2023 информатика</title>
+  <title>Урок 14 | ОГЭ 2023 информатика</title>
   <meta charset="utf-8">
 <!--
-<meta name="description" content=""><meta name="author" content="andygram">-->
+<meta name="description" content="Разбор заданий первой части варианта 15"><meta name="author" content="andygram">-->
   <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
   <meta http-equiv="Cache-Control" content="max-age=604800, must-revalidate" />
   <link href="./theme/css/screen.css" rel="stylesheet" type="text/css" />
@@ -20,26 +20,23 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
-<h2><a href="./lesson-04.html">Урок 4</a></h2>
-<h5><i class="icon-feather"></i> 11.10.2022, Вт </h5>
-Разбор задания 8 (Поисковый запрос) из вариантов 1-3
-<h2><a href="./lesson-03.html">Урок 3</a></h2>
-<h5><i class="icon-feather"></i> 04.10.2022, Вт </h5>
-Разбор задания 9 (Схема дорог) из вариантов 1-3
-<h2><a href="./lesson-02.html">Урок 2</a></h2>
-<h5><i class="icon-feather"></i> 27.09.2022, Вт </h5>
-Разбор задания 10 (Системы счисления) из вариантов 1-3; Разбор домашнего задания (13.2 вариант 2)
-<h2><a href="./lesson-01.html">Урок 1</a></h2>
-<h5><i class="icon-feather"></i> 20.09.2022, Вт </h5>
-Разбор заданий 13.1 (создание презентации) и 13.2 (форматирование текста) из варианта 1
-<h2><a href="./mempython.html">Питончик</a></h2>
-<h5><i class="icon-feather"></i> 17.09.2022, Сб </h5>
-Шпаргалка по языку Python
-<div class="pagination">
-        <a href="./index2.html">&larr;Prev</a>
-    page 3 of 4.
-        <a href="./index4.html">Next&rarr;</a>
-</div>    </div>
+<h2><a href="./lesson-14.html">Урок 14</a></h2>
+<h5><i class="icon-feather"></i> 14.01.2023, Сб
+<i class="icon-bookmarks"></i>
+<span><a href="./tag/oge.html">oge</a> / </span>
+<span><a href="./tag/lesson.html">lesson</a> / </span>
+</h5>
+
+<h1>Вариант 15</h1>
+<p><img alt="pic" src="./images/evich2021-V15-p1.png">
+<img alt="pic" src="./images/evich2021-V15-p2.png">
+<img alt="pic" src="./images/evich2021-V15-p3.png">
+<img alt="pic" src="./images/evich2021-V15-p4.png"></p>
+<h2>Ответы к заданиям</h2>
+<p><img alt="pic" src="./images/evich2021-book-answer-1.png"></p>
+
+<p align="center"><a href="#">on the top</a></p>
+    </div>
 </div>
 <div id="footer-wrapper">
 <ul class="footer">
