--- a/lesson-14.html
+++ b/lesson-14.html
@@ -4,7 +4,7 @@
   <title>Урок 14 | ОГЭ 2023 информатика</title>
   <meta charset="utf-8">
 <!--
-<meta name="description" content="Разбор заданий первой части варианта 15"><meta name="author" content="andygram">-->
+<meta name="description" content="Решение заданий первой части варианта 15"><meta name="author" content="andygram">-->
   <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
   <meta http-equiv="Cache-Control" content="max-age=604800, must-revalidate" />
   <link href="./theme/css/screen.css" rel="stylesheet" type="text/css" />
@@ -27,7 +27,7 @@
 <span><a href="./tag/lesson.html">lesson</a> / </span>
 </h5>
 
-<h1>Вариант 15</h1>
+<h1>Решение заданий первой части</h1>
 <p><img alt="pic" src="./images/evich2021-V15-p1.png">
 <img alt="pic" src="./images/evich2021-V15-p2.png">
 <img alt="pic" src="./images/evich2021-V15-p3.png">
