--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 Стратегия сдачи ОГЭ на 13 баллов из 19
 <h2><a href="./lesson-14.html">Урок 14</a></h2>
 <h5><i class="icon-feather"></i> 14.01.2023, Сб </h5>
-Решение заданий первой части варианта 15
+Решение заданий первой части
 <h2><a href="./lesson-13.html">Урок 13</a></h2>
 <h5><i class="icon-feather"></i> 11.01.2023, Ср </h5>
 Разбор задания 5 (Вычислитель) из вариантов 1-3
