--- a/lesson-14.html
+++ b/lesson-14.html
@@ -4,7 +4,7 @@
   <title>Урок 14 | ОГЭ 2023 информатика</title>
   <meta charset="utf-8">
 <!--
-<meta name="description" content="Решение заданий первой части варианта 15"><meta name="author" content="andygram">-->
+<meta name="description" content="Решение заданий первой части"><meta name="author" content="andygram">-->
   <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
   <meta http-equiv="Cache-Control" content="max-age=604800, must-revalidate" />
   <link href="./theme/css/screen.css" rel="stylesheet" type="text/css" />
@@ -27,12 +27,43 @@
 <span><a href="./tag/lesson.html">lesson</a> / </span>
 </h5>
 
-<h1>Решение заданий первой части</h1>
+<h1>Решение задач первой части варианта 15</h1>
+<table>
+<thead>
+<tr>
+<th style="text-align: center;"><em>Задания:</em></th>
+<th style="text-align: center;">1</th>
+<th style="text-align: center;">2</th>
+<th style="text-align: center;">3</th>
+<th style="text-align: center;">4</th>
+<th style="text-align: center;">5</th>
+<th style="text-align: center;">6</th>
+<th style="text-align: center;">7</th>
+<th style="text-align: center;">8</th>
+<th style="text-align: center;">9</th>
+<th style="text-align: center;">10</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align: center;"><strong><em>Ответы:</em></strong></td>
+<td style="text-align: center;">121</td>
+<td style="text-align: center;">БАБОЧКА</td>
+<td style="text-align: center;">24</td>
+<td style="text-align: center;">22</td>
+<td style="text-align: center;">8</td>
+<td style="text-align: center;">23</td>
+<td style="text-align: center;">3716542</td>
+<td style="text-align: center;">260</td>
+<td style="text-align: center;">8</td>
+<td style="text-align: center;">94</td>
+</tr>
+</tbody>
+</table>
 <p><img alt="pic" src="./images/evich2021-V15-p1.png">
 <img alt="pic" src="./images/evich2021-V15-p2.png">
 <img alt="pic" src="./images/evich2021-V15-p3.png">
-<img alt="pic" src="./images/evich2021-V15-p4.png">
-<img alt="pic" src="./images/evich2021-V15-answers.png"></p>
+<img alt="pic" src="./images/evich2021-V15-p4.png"></p>
 
 <p align="center"><a href="#">on the top</a></p>
     </div>
