--- a/lesson-15.html
+++ b/lesson-15.html
@@ -27,14 +27,13 @@
 <span><a href="./tag/lesson.html">lesson</a> / </span>
 </h5>
 
-<h1>Стратегия сдачи ОГЭ</h1>
-<h1>на 13 из 19 баллов</h1>
+<h2>Стратегия сдачи ОГЭ на 13 из 19 баллов</h2>
 <p><img alt="pic" src="./images/oge-inf-2023-mark.png"></p>
 <h2>Решение заданий первой части</h2>
 <p><img alt="pic" src="./images/oge-inf-part-1.png"></p>
 <h2>Решение заданий второй части</h2>
 <p><img alt="pic" src="./images/oge-inf-part-2.png"></p>
-<h2>Оценка текущего уровня подготовки</h2>
+<h3>Субъективная оценка текущего уровня подготовки</h3>
 <p><img alt="pic" src="./images/oge-inf-curr-level-1.png"></p>
 
 <p align="center"><a href="#">on the top</a></p>
