--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
 </div>    <div id="main">
 <h2><a href="./lesson-15.html">Урок 15</a></h2>
-<h5><i class="icon-feather"></i> 21.01.2023, Сб </h5>
+<h5><i class="icon-feather"></i> 24.01.2023, Вт </h5>
 Стратегия сдачи ОГЭ на 13 баллов из 19
 <h2><a href="./lesson-14.html">Урок 14</a></h2>
 <h5><i class="icon-feather"></i> 14.01.2023, Сб </h5>
