--- a/fipi.html
+++ b/fipi.html
@@ -24,7 +24,7 @@
 <h5><i class="icon-feather"></i> 12.09.2022, Пн
 <i class="icon-bookmarks"></i>
 <span><a href="./tag/oge.html">oge</a> / </span>
-<span><a href="./tag/fipi.html">fipi</a> / </span>
+<span><a href="./tag/book.html">book</a> / </span>
 </h5>
 
 <h1>Основной государственный экзамен по ИНФОРМАТИКЕ</h1>
@@ -39,9 +39,7 @@
 <div id="footer-wrapper">
 <ul class="footer">
      <li class="footer"><a href="./tag/book.html">book&nbsp;&bull;&nbsp;</a></li>
-     <li class="footer"><a href="./tag/fipi.html">fipi&nbsp;&bull;&nbsp;</a></li>
      <li class="footer"><a href="./tag/lesson.html">lesson&nbsp;&bull;&nbsp;</a></li>
-     <li class="footer"><a href="./tag/log.html">log&nbsp;&bull;&nbsp;</a></li>
      <li class="footer"><a href="./tag/oge.html">oge</a></li>
 </ul><ul class="footer">
     <li class="footer">&copy;&nbsp;2022&nbsp;::</li>
