--- a/lesson-16.html
+++ b/lesson-16.html
@@ -31,9 +31,9 @@
 <p><img alt="pic" src="./images/logic-diags.png"></p>
 <h3>Оценка текущего уровня подготовки</h3>
 <p><img alt="pic" src="./images/oge-inf-curr-level-2.png"></p>
-<p><img alt="pic" src="./images/logic-and.png">
+<p><img alt="pic" src="./images/logic-or.png">
+<img alt="pic" src="./images/logic-and.png">
 <img alt="pic" src="./images/logic-not.png">
-<img alt="pic" src="./images/logic-or.png">
 <img alt="pic" src="./images/logic-order.png"></p>
 <h3>Дополнительная информация</h3>
 <p><img alt="pic" src="./images/logic-all.png"></p>
@@ -46,9 +46,7 @@
 <div id="footer-wrapper">
 <ul class="footer">
      <li class="footer"><a href="./tag/book.html">book&nbsp;&bull;&nbsp;</a></li>
-     <li class="footer"><a href="./tag/fipi.html">fipi&nbsp;&bull;&nbsp;</a></li>
      <li class="footer"><a href="./tag/lesson.html">lesson&nbsp;&bull;&nbsp;</a></li>
-     <li class="footer"><a href="./tag/log.html">log&nbsp;&bull;&nbsp;</a></li>
      <li class="footer"><a href="./tag/oge.html">oge</a></li>
 </ul><ul class="footer">
     <li class="footer">&copy;&nbsp;2022&nbsp;::</li>
