--- a/meeting.html
+++ b/meeting.html
@@ -23,7 +23,7 @@
 <h2><a href="./meeting.html">Договор</a></h2>
 <h5><i class="icon-feather"></i> 11.09.2022, Вс
 <i class="icon-bookmarks"></i>
-<span><a href="./tag/log.html">log</a> / </span>
+<span><a href="./tag/book.html">book</a> / </span>
 </h5>
 
 <h3>Цель занятий</h3>
@@ -46,9 +46,7 @@
 <div id="footer-wrapper">
 <ul class="footer">
      <li class="footer"><a href="./tag/book.html">book&nbsp;&bull;&nbsp;</a></li>
-     <li class="footer"><a href="./tag/fipi.html">fipi&nbsp;&bull;&nbsp;</a></li>
      <li class="footer"><a href="./tag/lesson.html">lesson&nbsp;&bull;&nbsp;</a></li>
-     <li class="footer"><a href="./tag/log.html">log&nbsp;&bull;&nbsp;</a></li>
      <li class="footer"><a href="./tag/oge.html">oge</a></li>
 </ul><ul class="footer">
     <li class="footer">&copy;&nbsp;2022&nbsp;::</li>
