--- a/lesson-18.html
+++ b/lesson-18.html
@@ -30,8 +30,16 @@
 <h3>Оценка текущего уровня подготовки</h3>
 <p><img alt="pic" src="./images/oge-inf-curr-level-4.png"></p>
 <h1>Задание 6 (Анализ программного кода)</h1>
-<h3>Три разновидности программного кода в задачах ОГЭ</h3>
-<p><img alt="pic" src="./images/evich2021-book-cover.png"></p>
+<h2>Три разновидности программного кода в задачах ОГЭ</h2>
+<h3>Условный оператор</h3>
+<h2>if ... else ...</h2>
+<p><img alt="pic" src="./images/evich2021-V02-Z06_task.png"></p>
+<h3>Конечный цикл</h3>
+<h2>for ...</h2>
+<p><img alt="pic" src="./images/evich2021-V13-Z06_task.png"></p>
+<h3>Бесконечный цикл</h3>
+<h2>while ...</h2>
+<p><img alt="pic" src="./images/evich2021-V20-Z06_task.png"></p>
 <h3>Скорректированная оценка уровня подготовки</h3>
 <p><img alt="pic" src="./images/oge-inf-curr-level-4.png"></p>
 
