--- a/lesson-18.html
+++ b/lesson-18.html
@@ -31,42 +31,39 @@
 <p><img alt="pic" src="./images/oge-inf-curr-level-4.png"></p>
 <h1>Задание 6 (Анализ программного кода)</h1>
 <h2>Три разновидности программного кода в задачах ОГЭ</h2>
-<h3>Условный оператор <strong>if ... else ...</strong></h3>
 <table>
 <thead>
 <tr>
-<th><img alt="pic" src="./images/evich2021-V02-Z06_task.png"></th>
+<th>Условный оператор (<strong>if ... else ...</strong>)</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td></td>
+<td><img alt="pic" src="./images/evich2021-V02-Z06_task.png"></td>
 </tr>
 </tbody>
 </table>
-<h3>Конечный цикл <strong>for ...</strong></h3>
 <table>
 <thead>
 <tr>
-<th><img alt="pic" src="./images/evich2021-V13-Z06_task.png"></th>
+<th>Конечный цикл (<strong>for ...</strong>)</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td></td>
+<td><img alt="pic" src="./images/evich2021-V13-Z06_task.png"></td>
 </tr>
 </tbody>
 </table>
-<h3>Бесконечный цикл <strong>while ...</strong></h3>
 <table>
 <thead>
 <tr>
-<th><img alt="pic" src="./images/evich2021-V20-Z06_task.png"></th>
+<th>Бесконечный цикл (<strong>while ...</strong>)</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td></td>
+<td><img alt="pic" src="./images/evich2021-V20-Z06_task.png"></td>
 </tr>
 </tbody>
 </table>
