--- a/categories.html
+++ b/categories.html
@@ -22,7 +22,8 @@
 </div>    <div id="main">
     <h1>Categories on ОГЭ 2023 информатика</h1>
     <ul>
-        <li><a href="./category/oge.html">ОГЭ</a> (30)</li>
+        <li><a href="./category/oge.html">ОГЭ</a> (27)</li>
+        <li><a href="./category/python.html">Python</a> (4)</li>
     </ul>
     </div>
 </div>
