--- a/index6.html
+++ b/index6.html
@@ -26,18 +26,19 @@
 <h2><a href="./evichbook.html">Книга</a></h2>
 <h5><i class="icon-feather"></i> 15.09.2022, Чт </h5>
 Людмила Николаевна Евич. ОГЭ-2021 Информатика и ИКТ. Подготовка к ОГЭ-2021. 9 класс. 20 тренировочных вариантов по демоверсии 2021 года.
+<h2><a href="./datatypes.html">Типы данных</a></h2>
+<h5><i class="icon-feather"></i> 14.09.2022, Ср </h5>
+Любая программа во время своей работы хранит в оперативной памяти различные данные: названия и фамилии номера и количества суммы и проценты даты и время ... и тому подобное то есть хранит данные различных типов. Если бы данные имели цвет, то память программы могла бы выглядеть так: Есть один тонкий момент, связанный …
 <h2><a href="./fipi.html">Ф И П И</a></h2>
 <h5><i class="icon-feather"></i> 13.09.2022, Вт </h5>
 Федеральный институт педагогических измерений. Пояснения к демонстрационному варианту контрольных измерительных материалов основного государственного экзамена 2023 года.
 <h2><a href="./calendar-year.html">Учебный год</a></h2>
 <h5><i class="icon-feather"></i> 12.09.2022, Пн </h5>
 Календарь на 2022-2023 учебный год
-<h2><a href="./meeting.html">Договор</a></h2>
-<h5><i class="icon-feather"></i> 11.09.2022, Вс </h5>
-Знакомство с родителями и договор
 <div class="pagination">
         <a href="./index5.html">&larr;Prev</a>
-    page 6 of 6.
+    page 6 of 7.
+        <a href="./index7.html">Next&rarr;</a>
 </div>    </div>
 </div>
 <div id="footer-wrapper">
