--- a/index7.html
+++ b/index7.html
@@ -20,25 +20,12 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
-<h2><a href="./lesson-17.html">Урок 17</a></h2>
-<h5><i class="icon-feather"></i> 07.02.2023, Вт </h5>
-Повторение: Задания 5 (Вычислитель) и 4 (Расстояние)
-<h2><a href="./lesson-16.html">Урок 16</a></h2>
-<h5><i class="icon-feather"></i> 03.02.2023, Пт </h5>
-Повторение: Логические выражения
-<h2><a href="./lesson-15.html">Урок 15</a></h2>
-<h5><i class="icon-feather"></i> 24.01.2023, Вт </h5>
-Стратегия сдачи ОГЭ на 13 баллов из 19
-<h2><a href="./lesson-14.html">Урок 14</a></h2>
-<h5><i class="icon-feather"></i> 14.01.2023, Сб </h5>
-Решение заданий первой части
-<h2><a href="./lesson-13.html">Урок 13</a></h2>
-<h5><i class="icon-feather"></i> 11.01.2023, Ср </h5>
-Разбор задания 5 (Вычислитель)
+<h2><a href="./meeting.html">Договор</a></h2>
+<h5><i class="icon-feather"></i> 11.09.2022, Вс </h5>
+Знакомство с родителями и договор
 <div class="pagination">
-        <a href="./index.html">&larr;Prev</a>
-    page 2 of 7.
-        <a href="./index3.html">Next&rarr;</a>
+        <a href="./index6.html">&larr;Prev</a>
+    page 7 of 7.
 </div>    </div>
 </div>
 <div id="footer-wrapper">
