--- a/lesson-23.html
+++ b/lesson-23.html
@@ -30,9 +30,14 @@
 <p><img alt="pic" src="./images/stepik-course-63223-python.png"></p>
 <p><img alt="pic" src="./images/stepik-course-63223-content3.png"></p>
 <h2>4.1.1</h2>
-<p>Напишите программу, которая в последовательности целых чисел определяет количество чисел, кратных 5 или 9. Программа получает на вход целые числа, количество введённых чисел неизвестно, последовательность чисел заканчивается числом 0 (0 — признак окончания ввода, не входит в последовательность). Количество чисел не превышает 1000. Введённые числа по модулю не превышают 30 000. Программа должна вывести одно число: количество чисел, кратных 5 или 9.</p>
-<p>Sample Input:<pre><code>
-15
+<p>Напишите программу, которая в последовательности целых чисел определяет 
+количество чисел, кратных 5 или 9. Программа получает на вход целые числа, 
+количество введённых чисел неизвестно, последовательность чисел 
+заканчивается числом 0 (0 — признак окончания ввода, не входит в последовательность). 
+Количество чисел не превышает 1000. 
+Введённые числа по модулю не превышают 30 000. 
+Программа должна вывести одно число: количество чисел, кратных 5 или 9.</p>
+<p>Sample Input:<pre><code>15
 11
 12
 18
@@ -42,19 +47,38 @@
 0</code></pre>
 Sample Output:<pre><code>
 4</code></pre></p>
-<h3>Решение:<pre><code></h3>
-<p>4</code></pre></p>
+<h3>Решение:<pre><code>i = 0</h3>
+<p>n = 1
+z = 0
+while n != 0:
+  i += 1
+  n = int(input('Введите следующее число:'))
+  if (n % 5 == 0) or (n % 9 == 0):
+    z += 1
+print(z)
+</code></pre></p>
 <h2>4.1.2</h2>
-<p>Напишите программу, которая в последовательности натуральных чисел определяет максимальное число, оканчивающееся на 3. Программа получает на вход количество чисел в последовательности, а затем сами числа. В последовательности всегда имеется число, оканчивающееся на 3. Количество чисел не превышает 1000. Введённые числа не превышают 30 000. Программа должна вывести одно число — максимальное число, оканчивающееся на 3.</p>
-<p>Sample Input:<pre><code>
-3
+<p>Напишите программу, которая в последовательности натуральных чисел 
+определяет максимальное число, оканчивающееся на 3. 
+Программа получает на вход количество чисел в последовательности, а затем сами числа. 
+В последовательности всегда имеется число, оканчивающееся на 3. 
+Количество чисел не превышает 1000. 
+Введённые числа не превышают 30 000. 
+Программа должна вывести одно число — максимальное число, оканчивающееся на 3.</p>
+<p>Sample Input:<pre><code>3
 53
 13
 46</code></pre>
 Sample Output:<pre><code>
 53</code></pre></p>
 <h3>Решение:<pre><code></h3>
-<p>4</code></pre></p>
+<p>n = int(input('Введите количество чисел:'))
+z = 0
+for i in range(1, n + 1):
+  a = int(input('Введите ' + str(i) + '-е число:'))
+  if (a % 10 == 3) and (a &gt; z):
+    z = a
+print(z)</code></pre></p>
 
 <p align="center"><a href="#">on the top</a></p>
     </div>
