--- a/index6.html
+++ b/index6.html
@@ -29,12 +29,12 @@
 <h2><a href="./evich_book.html">Книга</a></h2>
 <h5><i class="icon-feather"></i> 15.09.2022, Чт </h5>
 Людмила Николаевна Евич. ОГЭ-2021 Информатика и ИКТ. Подготовка к ОГЭ-2021. 9 класс. 20 тренировочных вариантов по демоверсии 2021 года.
+<h2><a href="./py_variables.html">Переменные</a></h2>
+<h5><i class="icon-feather"></i> 14.09.2022, Ср </h5>
+Во всех школах учителя информатики, объясняя понятие переменной, предлагают ученикам представлять "коробку со значением внутри" как образ этой самой переменной. И демонстрируют картинки, показывающие, что коробка остаётся неизменной, а меняется её содержимое, то есть что переменной величиной является значение: Это вредная метафора, мешающая по-настоящему изучать языки программирования и вносящая путаницу …
 <h2><a href="./py_datatypes.html">Типы данных</a></h2>
 <h5><i class="icon-feather"></i> 14.09.2022, Ср </h5>
 Любая программа во время своей работы хранит в оперативной памяти различные данные: названия и фамилии номера и количества суммы и проценты даты и время ... и тому подобное то есть хранит данные различных типов. Если бы данные имели цвет, то память программы могла бы выглядеть так: Есть один тонкий момент, связанный …
-<h2><a href="./oge_fipi.html">Ф И П И</a></h2>
-<h5><i class="icon-feather"></i> 13.09.2022, Вт </h5>
-Федеральный институт педагогических измерений. Пояснения к демонстрационному варианту контрольных измерительных материалов основного государственного экзамена 2023 года.
 <div class="pagination">
         <a href="./index5.html">&larr;Prev</a>
     page 6 of 7.
